--- a/openjdk-jre/Dockerfile
+++ b/openjdk-jre/Dockerfile
@@ -13,12 +13,11 @@ ENV DEBIAN_FRONTEND noninteractive
 # Default to UTF-8 file.encoding
 ENV LANG C.UTF-8
 
-ENV JAVA_VERSION 7u79
 ENV JAVA_UBUNTU_VERSION 7u79-2.5.5-0ubuntu0.14.04.2
 
 WORKDIR /root
 RUN apt-get update 
-RUN apt-get install -y curl git supervisor wget unzip
+#RUN apt-get install -y curl git supervisor wget unzip
 
 RUN apt-get install -y openjdk-7-jre-headless="$JAVA_UBUNTU_VERSION"
 
