--- a/oraclejdk/Dockerfile
+++ b/oraclejdk/Dockerfile
@@ -12,12 +12,9 @@ ENV LANG C.UTF-8
 # Use baseimage-docker's init system.
 CMD ["/sbin/my_init"]
 
-# ...put your own build instructions here...
-#ENV DEBIAN_FRONTEND noninteractive
 WORKDIR /root
 
-
-# Add a repo where OpenJDK can be found.
+# Add a repo where Oracle Java can be found.
 RUN add-apt-repository -y ppa:webupd8team/java
 
 RUN apt-get update
@@ -26,9 +23,9 @@ RUN apt-get install -y software-properties-common
 RUN apt-get install -y ca-certificates-java
 
 # Auto-accept the Oracle JDK license
-RUN DEBIAN_FRONTEND=noninteractive echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
+RUN DEBIAN_FRONTEND=noninteractive echo oracle-java7-installer shared/accepted-oracle-license-v1-1 select true | sudo /usr/bin/debconf-set-selections
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y oracle-java8-installer
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y oracle-java7-installer
 
 RUN /var/lib/dpkg/info/ca-certificates-java.postinst configure
 
